--- a/style/style.css
+++ b/style/style.css
@@ -1171,7 +1171,7 @@ a {
 }
 
 .Authorization__form input {
-	padding: 16px 178px 16px 20px;
+	padding: 16px 17px 16px 20px;
 	margin-bottom: 30px;
 	width: 464px;
 }
@@ -1510,6 +1510,7 @@ textarea{
 	font-weight: 400;
 }
 /* DELIVETY PAGE */
+
 /* tovar page */
 .tovar__items{
 	display: flex;
@@ -1644,7 +1645,25 @@ textarea{
 	align-items: center;
 	justify-content: center;
 }
+.add__textarea{
+	padding: 16px 178px 16px 20px;
+	text-align: center;
+}
 /* add page */
+/* del page */
+
+.del__page{
+	padding-top: 150px;
+	height: 70vh;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.del__page a{
+	color: black;
+	font-size: 20px;
+}
+/* del page */
 @media screen and (max-width: 800px) {
 	.header-top-nav {
 		display: none;
@@ -1803,6 +1822,7 @@ textarea{
 	}
 	.tovar__item{
 		width: 350px;
+		gap: 10px;
 	}
 	.tovar{
 		margin: 15px;
