--- a/style/style.css
+++ b/style/style.css
@@ -1127,11 +1127,10 @@ a {
 .Authorization__items {
 	width: 1360px;
 	height: 385px;
-	border: 1px solid;
 	color: #EAEAEA;
 	display: flex;
 	justify-content: space-between;
-
+	gap: 30px;
 }
 
 .Authorization__item {
@@ -1152,8 +1151,7 @@ a {
 
 .auth__item-right {
 	border-left: 1px solid #EAEAEA;
-
-
+	
 }
 
 .Authorization__form p {
@@ -1172,8 +1170,8 @@ a {
 
 .Authorization__form input {
 	padding: 16px 17px 16px 20px;
-	margin-bottom: 30px;
 	width: 464px;
+	margin-bottom: 30px;
 }
 
 .Authorization__form span {
@@ -1200,6 +1198,7 @@ a {
 	font-size: 16px;
 	line-height: 28px;
 	height: 70px;
+	margin-bottom: 40px;
 }
 
 .auth__title {
@@ -1217,8 +1216,8 @@ a {
 .regist__items {
 	width: 1360px;
 	height: 683px;
-	border: 1px solid;
 	color: #EAEAEA;
+	gap: 50px;
 	display: flex;
 	justify-content: space-between;
 
@@ -1510,7 +1509,26 @@ textarea{
 	font-weight: 400;
 }
 /* DELIVETY PAGE */
+.acc p {
+    color: black;
+    font-family: monospace;
+    font-weight: 400;
+    font-size: 16px;
+    text-decoration: none;
+}
 
+.acc {
+    padding-left: 50px;
+    gap: 10px;
+	padding-top: 100px;
+	height: 80vh;
+}
+.acc h1{
+	color: black;
+}
+.acc p {
+    font-size: 20px;
+}
 /* tovar page */
 .tovar__items{
 	display: flex;
